--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -19,3 +19,16 @@
     letter-spacing: 1.5rem;
     animation: move-in-left 1.5s;
 }
+
+.heading-secondary{
+    font-size: 3.5rem;
+    background: linear-gradient(to right,#3F8511,#4CE830);
+    -webkit-background-clip: text;
+    color: transparent;
+    transition: all 0.2s;
+}
+
+.heading-secondary:hover{
+    transform:  skewX(10deg) skewY(1deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0,0,0,0.2);
+}
