--- a/css/component/composition.css
+++ b/css/component/composition.css
@@ -12,7 +12,7 @@
    transition: all 0.2s;
 }
 .composition__photo:hover{
-    outline: 1.5rem solid rgba(126, 213, 111);
+    outline: 1.5rem solid #5FC51D;
     transform: scale(1.1);
     z-index: 20;
 }
