--- a/css/sections/sections.css
+++ b/css/sections/sections.css
@@ -1,4 +1,5 @@
 .section_about{
-    background: #f7f7f7;
-    padding: 10rem;
+    background: linear-gradient(to left bottom,#EEDB1F 50%,rgba(238, 226, 112, 0.7));
+    padding: 20rem 0;
+    margin-top: -15rem; 
 }
